# video-dubber

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: api-reference.md  architecture.md  usage-guide.md
src/: lib.rs  main.rs  models.rs  pipeline.rs
src/audio/: assemble.rs  extract.rs  mod.rs
src/openrouter/: client.rs  mod.rs  transcribe.rs  translate.rs  tts.rs
