[package]
name = "video-dubber"
version = "0.1.0"
edition = "2021"
description = "CLI tool for automatic video dubbing using OpenRouter AI"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
anyhow = "1"
indicatif = "0.17"
tempfile = "3"
dotenvy = "0.15"
futures = "0.3"
